Fix link z-index

--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,6 @@
 
 a {
   text-decoration: none;
-  z-index: 100;
 }
 
 li {
